--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,6 @@ streamlit
 yfinance
 pandas
 matplotlib
-openai
 numpy
 plotly
-selenium
-webdriver-manager
-beautifulsoup4
-python-dotenv
-requests
+pandas_ta
